PDS-59 fix z-index of popup

--- a/src/app/components/idea-page/idea-page.component.css
+++ b/src/app/components/idea-page/idea-page.component.css
@@ -49,7 +49,7 @@
 .gcontent::before, .gcontent2::before {
     content: '';
     position: absolute;
-    z-index: 10;
+    z-index: 2;
     top: 0;
     left: 0;
     width: 100%;
@@ -60,7 +60,7 @@
 
 .te {
     position: relative;
-    z-index: 15;
+    z-index: 2;
     text-align: center;
     color: white;
 }
