--- a/src/app/components/problem-feeds/tools/tools.component.css
+++ b/src/app/components/problem-feeds/tools/tools.component.css
@@ -62,7 +62,7 @@ p {
 .dropdown {
     position: relative;
     display: inline-block;
-    z-index: 10;
+    z-index: 2;
 }
 
 .menu {
